{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 35,
  "lineage": "4bbd5a9b-8be7-a057-0569-00ef0b6c9d64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:internet-gateway/igw-0c1518c9848e2bccb",
            "id": "igw-0c1518c9848e2bccb",
            "owner_id": "085703842775",
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:085703842775:loadbalancer/app/fast-food-alb/8ff290acfeb02ce6",
            "arn_suffix": "app/fast-food-alb/8ff290acfeb02ce6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fast-food-alb-923183373.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:085703842775:loadbalancer/app/fast-food-alb/8ff290acfeb02ce6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fast-food-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-062838c3b080e6032"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0935972521c6eeb24"
              },
              {
                "subnet_id": "subnet-0a0964338e2168002"
              }
            ],
            "subnets": [
              "subnet-0935972521c6eeb24",
              "subnet-0a0964338e2168002"
            ],
            "tags": {
              "Name": "fast-food-fiap-alb"
            },
            "tags_all": {
              "Name": "fast-food-fiap-alb"
            },
            "vpc_id": "vpc-080a70409388c4ab7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-balancer-fast-food",
            "aws_subnet.fast-food-subnet-public1",
            "aws_subnet.fast-food-subnet-public2",
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:085703842775:listener/app/fast-food-alb/8ff290acfeb02ce6/6b17770583c33de5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:085703842775:targetgroup/ecs-fast-food-target-group/c52b1a34dd013df6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:085703842775:listener/app/fast-food-alb/8ff290acfeb02ce6/6b17770583c33de5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:085703842775:loadbalancer/app/fast-food-alb/8ff290acfeb02ce6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.sg-balancer-fast-food",
            "aws_subnet.fast-food-subnet-public1",
            "aws_subnet.fast-food-subnet-public2",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:085703842775:targetgroup/ecs-fast-food-target-group/c52b1a34dd013df6",
            "arn_suffix": "targetgroup/ecs-fast-food-target-group/c52b1a34dd013df6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:085703842775:targetgroup/ecs-fast-food-target-group/c52b1a34dd013df6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-fast-food-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fast-food-fiap"
            },
            "tags_all": {
              "Name": "fast-food-fiap"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:route-table/rtb-024793377e99c9692",
            "id": "rtb-024793377e99c9692",
            "owner_id": "085703842775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1518c9848e2bccb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af3ee2eef542da19",
            "route_table_id": "rtb-024793377e99c9692",
            "subnet_id": "subnet-0935972521c6eeb24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.fast-food-subnet-public1",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a578927e73dd3f05",
            "route_table_id": "rtb-024793377e99c9692",
            "subnet_id": "subnet-0a0964338e2168002"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.fast-food-subnet-public2",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-balancer-fast-food",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:security-group/sg-062838c3b080e6032",
            "description": "Security group do load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Podera sair pela sua origem, como entrou pela 80 sai pela 80",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062838c3b080e6032",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tudo o que vai chegar no Security Group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "balancers-fast-food-security-group",
            "name_prefix": "",
            "owner_id": "085703842775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "balancers-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "tags_all": {
              "Name": "balancers-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "timeouts": null,
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-cluster-fast-food",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:security-group/sg-07d412d19a2410adb",
            "description": "SG utilizado nos clusters",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Podera sair pela sua origem",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d412d19a2410adb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "So permitiremos a entrada caso a origem seja do balancers security group",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062838c3b080e6032"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "cluster-fast-food-security-group",
            "name_prefix": "",
            "owner_id": "085703842775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "tags_all": {
              "Name": "cluster-fast-food-security-group",
              "project": "fiap-fast-food"
            },
            "timeouts": null,
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-balancer-fast-food",
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:subnet/subnet-08d2ebedf39c6cad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d2ebedf39c6cad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085703842775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "fast-food-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:subnet/subnet-01ef722cd9c0f0d7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ef722cd9c0f0d7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "085703842775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-private2-us-east-1b"
            },
            "tags_all": {
              "Name": "fast-food-subnet-private2-us-east-1b"
            },
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:subnet/subnet-0935972521c6eeb24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0935972521c6eeb24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085703842775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "fast-food-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fast-food-subnet-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:subnet/subnet-0a0964338e2168002",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0964338e2168002",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "085703842775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-food-subnet-public2-us-east-1b"
            },
            "tags_all": {
              "Name": "fast-food-subnet-public2-us-east-1b"
            },
            "vpc_id": "vpc-080a70409388c4ab7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-fast-food"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-fast-food",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:085703842775:vpc/vpc-080a70409388c4ab7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07009d3b473c12b41",
            "default_route_table_id": "rtb-007a4a19b949a5687",
            "default_security_group_id": "sg-0034b2c77cb32b008",
            "dhcp_options_id": "dopt-050df4eac69996959",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080a70409388c4ab7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007a4a19b949a5687",
            "owner_id": "085703842775",
            "tags": {
              "Name": "fast-food-vpc",
              "project": "fiap-fast-food"
            },
            "tags_all": {
              "Name": "fast-food-vpc",
              "project": "fiap-fast-food"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}